Revert "Update language toolchain to JDK 17 (REL-802)" (REL-803)
This reverts commit ef8ca4ecc223638b980854a1d4a445e2f5836066. This is necessary because customer still seems to be targetting a Java 11 language level, and as such, it cannot incorporate a jars targetting a 17 language level.